--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -14,13 +14,14 @@
 
 	.output {
 		margin-top: 10px;
-		background-color: black;
-		color: #BC6FF1;
-		border: 1px solid #515457;
+		background-color: var(--background-color);
+		color: var(--primary-color);
+		border: 1px solid var(--border-color);
 		font-weight: bold;
 		flex-grow: 1;
 		padding: 10px;
 		text-align: initial;
 		overflow: auto;
+		border-radius: 5px;
 	}
 }
