--- a/src/styles/toolbar.css
+++ b/src/styles/toolbar.css
@@ -17,13 +17,14 @@
 
 @media (prefers-color-scheme: dark) {
 
+
 	.toolbar {
 		margin-top: 10px;
 		display: flex;
 		min-height: 24px;
-		background-color: #4d4d4d;
+		background-color: var(--toolbar-color);
 		padding: 10px;
-		border: 1px solid white;
+		border: 1px solid var(--border-color);
 	}
 	.tbfill {
 		flex: 1
